--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<body>
 	    <div class="navbar-fixed">
 	      <nav>
-	        <div class="nav-wrapper">
+	        <div class="nav-wrapper center-block">
 		          <ul>
 		            <li><a href="#abilities">A</a></li>
 		            <li><a href="#barrier">B</a></li>
@@ -46,6 +46,7 @@
 		<div class="container">
 			<div class="row">
 				 <div class="col s12">
+					<p class='flow-text'>Welcome to this glossary of terms related to education, performance, and operations. OpenAI suggested the terms, defined them, and suggested related terms. To suggest related terms I used the embeddings API, embedded each term and definition, and then picked top-ranked relionships based on cosine similarity.</p>
 					<article>
 						<dl>
 							<dt id='2nd-order-effects'>2nd order effects</dt>
